<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/link_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_volumes" />

    <com.champo.unsuckyringer.Slider
        android:id="@+id/ringer_slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.champo.unsuckyringer.Slider
        android:id="@+id/notification_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quick_settings"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/set_silent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/silent" 
            android:layout_weight="0.33" />

        <Button
            android:id="@+id/set_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="0.33"
            android:text="@string/sleep" />

        <Button
            android:id="@+id/set_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="0.33"
            android:text="@string/full" />

    </LinearLayout>

</LinearLayout>